--- a/restaurant/index.html
+++ b/restaurant/index.html
@@ -44,7 +44,7 @@
         <nav class="navbar navbar-expand-lg custom_nav-container ">
           <a class="navbar-brand" href="index.html">
             <span>
-              Feane
+              Game Day Grill
             </span>
           </a>
 
@@ -152,7 +152,7 @@
                       Fast Food Restaurant
                     </h1>
                     <p>
-                      Doloremque, itaque aperiam facilis rerum, commodi, temporibus sapiente ad mollitia laborum quam quisquam esse error unde. Tempora ex doloremque, labore, sunt repellat dolore, iste magni quos nihil ducimus libero ipsam.
+                      hi
                     </p>
                     <div class="btn-box">
                       <a href="" class="btn1">
