--- a/restaurant/about.html
+++ b/restaurant/about.html
@@ -160,10 +160,7 @@
               </h2>
             </div>
             <p>
-              There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration
-              in some form, by injected humour, or randomised words which don't look even slightly believable. If you
-              are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in
-              the middle of text. All
+              We are a local retraunt that is family owned SSS
             </p>
             <a href="">
               Read More
