i was trying to do some simple things.
i was just trying the code and seeing what i can do to it

--- a/restaurant/index.html
+++ b/restaurant/index.html
@@ -130,7 +130,7 @@
                   <i class="fa fa-search" aria-hidden="true"></i>
                 </button>
               </form>
-              <a href="" class="order_online">
+              <a href="menu.html" class="order_online">
                 Order Online
               </a>
             </div>
@@ -149,13 +149,13 @@
                 <div class="col-md-7 col-lg-6 ">
                   <div class="detail-box">
                     <h1>
-                      Fast Food Restaurant
+                      Weekly special
                     </h1>
                     <p>
-                      hi
+                      Free fries with qualifying purchases
                     </p>
                     <div class="btn-box">
-                      <a href="" class="btn1">
+                      <a href="menu.html" class="btn1">
                         Order Now
                       </a>
                     </div>
@@ -236,7 +236,7 @@
                   Tasty Thursdays
                 </h5>
                 <h6>
-                  <span>20%</span> Off
+                  <span>15%</span>OFF
                 </h6>
                 <a href="">
                   Order Now <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 456.029 456.029" style="enable-background:new 0 0 456.029 456.029;" xml:space="preserve">
@@ -305,7 +305,7 @@
                   Pizza Days
                 </h5>
                 <h6>
-                  <span>15%</span> Off
+                  <span>20%</span>OFF
                 </h6>
                 <a href="">
                   Order Now <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 456.029 456.029" style="enable-background:new 0 0 456.029 456.029;" xml:space="preserve">
