i was just making the ads for the carsoel

--- a/restaurant/index.html
+++ b/restaurant/index.html
@@ -149,10 +149,10 @@
                 <div class="col-md-7 col-lg-6 ">
                   <div class="detail-box">
                     <h1>
-                      Weekly special
+                      Savor the Flavor!
                     </h1>
                     <p>
-                      Free fries with qualifying purchases
+                      Indulge in the Juicy Perfection of Our Prime Steaks
                     </p>
                     <div class="btn-box">
                       <a href="menu.html" class="btn1">
@@ -170,13 +170,13 @@
                 <div class="col-md-7 col-lg-6 ">
                   <div class="detail-box">
                     <h1>
-                      Fast Food Restaurant
+                      Grill the Season
                     </h1>
                     <p>
-                      Doloremque, itaque aperiam facilis rerum, commodi, temporibus sapiente ad mollitia laborum quam quisquam esse error unde. Tempora ex doloremque, labore, sunt repellat dolore, iste magni quos nihil ducimus libero ipsam.
+                      limited-time availability of these specials
                     </p>
                     <div class="btn-box">
-                      <a href="" class="btn1">
+                      <a href="menu.html" class="btn1">
                         Order Now
                       </a>
                     </div>
@@ -186,18 +186,18 @@
             </div>
           </div>
           <div class="carousel-item">
-            <div class="container ">
+            <div class=" ">
               <div class="row">
                 <div class="col-md-7 col-lg-6 ">
                   <div class="detail-box">
                     <h1>
-                      Fast Food Restaurant
+                      Grill On-Demand
                     </h1>
                     <p>
-                      Doloremque, itaque aperiam facilis rerum, commodi, temporibus sapiente ad mollitia laborum quam quisquam esse error unde. Tempora ex doloremque, labore, sunt repellat dolore, iste magni quos nihil ducimus libero ipsam.
+                      Delicious Grilled Meals Delivered to Your Doorstep in Minutes.
                     </p>
                     <div class="btn-box">
-                      <a href="" class="btn1">
+                      <a href="menu.html" class="btn1">
                         Order Now
                       </a>
                     </div>
