STARTED ON THE SAMLL STUFF

--- a/restaurant/index.html
+++ b/restaurant/index.html
@@ -186,7 +186,7 @@
             </div>
           </div>
           <div class="carousel-item">
-            <div class=" ">
+            <div class="container ">
               <div class="row">
                 <div class="col-md-7 col-lg-6 ">
                   <div class="detail-box">
@@ -233,12 +233,15 @@
               </div>
               <div class="detail-box">
                 <h5>
-                  Tasty Thursdays
+                  Classic Combo Deal
                 </h5>
                 <h6>
-                  <span>15%</span>OFF
+                  <span> $10.99
+                    <h6>                  
+                    </span> a classic burger ( beef, chicken, or veggie) with a side of your choice of side 
+                    </h6>
                 </h6>
-                <a href="">
+                <a href="menu.html">
                   Order Now <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 456.029 456.029" style="enable-background:new 0 0 456.029 456.029;" xml:space="preserve">
                     <g>
                       <g>
@@ -302,10 +305,12 @@
               </div>
               <div class="detail-box">
                 <h5>
-                  Pizza Days
+                  Family Feast
                 </h5>
                 <h6>
-                  <span>20%</span>OFF
+                  <span> $39.99
+                    <h6></span>A combo for the whole family! Get four burgers and four orders of fries.(or any side) </h6>
+                  
                 </h6>
                 <a href="">
                   Order Now <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 456.029 456.029" style="enable-background:new 0 0 456.029 456.029;" xml:space="preserve">
