--- a/restaurant/menu.html
+++ b/restaurant/menu.html
@@ -169,7 +169,7 @@
                 </div>
                 <div class="detail-box">
                   <h5>
-                    Black & Bleu Burger
+                    Black & Blue Burger
                   </h5>
                   <p>
                     Lean ground beef cooked to order, blackened, and topped with Bleu cheese crumbles. Served on rye with Swiss, grilled onions, lettuce, and tomato. Finished with bleu cheese dressing
