--- a/restaurant/index.html
+++ b/restaurant/index.html
@@ -404,10 +404,10 @@
                 </div>
                 <div class="detail-box">
                   <h5>
-                    Delicious Pizza
+                    Black & Blue Burger
                   </h5>
                   <p>
-                    Veniam debitis quaerat officiis quasi cupiditate quo, quisquam velit, magnam voluptatem repellendus sed eaque
+                    Lean ground beef cooked to order, blackened, and topped with Bleu cheese crumbles. Served on rye with Swiss, grilled onions, lettuce, and tomato. Finished with bleu cheese dressing
                   </p>
                   <div class="options">
                     <h6>
