--- a/restaurant/menu.html
+++ b/restaurant/menu.html
@@ -154,14 +154,14 @@
       <ul class="filters_menu">
         <li class="active" data-filter="*">All</li>
         <li data-filter=".burger">Burger</li>
-        <li data-filter=".pizza">Pizza</li>
+        <li data-filter=".salad">Salad</li>
         <li data-filter=".pasta">Pasta</li>
         <li data-filter=".fries">Fries</li>
       </ul>
 
       <div class="filters-content">
         <div class="row grid">
-          <div class="col-sm-6 col-lg-4 all pizza">
+          <div class="col-sm-6 col-lg-4 all burger">
             <div class="box">
               <div>
                 <div class="img-box">
@@ -176,7 +176,7 @@
                   </p>
                   <div class="options">
                     <h6>
-                      $20
+                      $11.49
                     </h6>
                     <a href="">
                       <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 456.029 456.029" style="enable-background:new 0 0 456.029 456.029;" xml:space="preserve">
@@ -245,14 +245,14 @@
                 </div>
                 <div class="detail-box">
                   <h5>
-                    Delicious Burger
+                    BBQ Bacon Cheddar Burger
                   </h5>
                   <p>
-                    Veniam debitis quaerat officiis quasi cupiditate quo, quisquam velit, magnam voluptatem repellendus sed eaque
+                    Lean ground beef cooked to order trimmed with bacon, BBQ, cheddar cheese, lettuce, tomato, and grilled onions on a white bun.
                   </p>
                   <div class="options">
                     <h6>
-                      $15
+                      $9.99
                     </h6>
                     <a href="">
                       <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 456.029 456.029" style="enable-background:new 0 0 456.029 456.029;" xml:space="preserve">
@@ -313,7 +313,7 @@
               </div>
             </div>
           </div>
-          <div class="col-sm-6 col-lg-4 all pizza">
+          <div class="col-sm-6 col-lg-4 all salad">
             <div class="box">
               <div>
                 <div class="img-box">
@@ -321,14 +321,14 @@
                 </div>
                 <div class="detail-box">
                   <h5>
-                    Delicious Pizza
+                    Mediterranean Salad
                   </h5>
                   <p>
-                    Veniam debitis quaerat officiis quasi cupiditate quo, quisquam velit, magnam voluptatem repellendus sed eaque
+                    Chopped romaine tossed with vinaigrette dressing, black and green olives, diced tomatoes, red onions, pepperoncini, and topped with Feta cheese
                   </p>
                   <div class="options">
                     <h6>
-                      $17
+                      $8.99
                     </h6>
                     <a href="">
                       <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 456.029 456.029" style="enable-background:new 0 0 456.029 456.029;" xml:space="preserve">
@@ -397,14 +397,14 @@
                 </div>
                 <div class="detail-box">
                   <h5>
-                    Delicious Pasta
+                    Chicken Alfredo
                   </h5>
                   <p>
-                    Veniam debitis quaerat officiis quasi cupiditate quo, quisquam velit, magnam voluptatem repellendus sed eaque
+                    Grilled chicken breast tossed with homemade Alfredo sauce over fettuccini pasta. Topped with Parmesan cheese
                   </p>
                   <div class="options">
                     <h6>
-                      $18
+                      $13.49
                     </h6>
                     <a href="">
                       <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 456.029 456.029" style="enable-background:new 0 0 456.029 456.029;" xml:space="preserve">
@@ -541,7 +541,7 @@
               </div>
             </div>
           </div>
-          <div class="col-sm-6 col-lg-4 all pizza">
+          <div class="col-sm-6 col-lg-4 all salad">
             <div class="box">
               <div>
                 <div class="img-box">
