--- a/restaurant/index.html
+++ b/restaurant/index.html
@@ -322,22 +322,6 @@
                     </g>
                     <g>
                     </g>
-                    <g>
-                    </g>
-                    <g>
-                    </g>
-                    <g>
-                    </g>
-                    <g>
-                    </g>
-                    <g>
-                    </g>
-                    <g>
-                    </g>
-                    <g>
-                    </g>
-                    <g>
-                    </g>
                   </svg>
                 </a>
               </div>
@@ -1055,7 +1039,7 @@
               </h2>
             </div>
             <p>
-              ?????????????????????
+              The Game Day Grill launched its website to customers in 2023 and is ran by ------   
             </p>
             <a href="">
               Read More
