--- a/restaurant/book.html
+++ b/restaurant/book.html
@@ -7,13 +7,19 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <!-- Mobile Metas -->
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+  
   <!-- Site Metas -->
   <meta name="keywords" content="" />
   <meta name="description" content="" />
   <meta name="author" content="" />
   <link rel="shortcut icon" href="images/favicon.png" type="">
 
-  <title> Feane </title>
+  <title> Game Day Grill </title>
+
+  <!-- HubSpot Embed Code -->
+  <!-- Start of HubSpot Embed Code -->
+  <script type="text/javascript" id="hs-script-loader" async defer src="//js-na1.hs-scripts.com/44192916.js"></script>
+  <!-- End of HubSpot Embed Code -->
 
   <!-- bootstrap core css -->
   <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
@@ -166,9 +172,11 @@
           <div class="map_container ">
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3085.863899022163!2d-84.51804080000001!3d39.336669!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88404f35f6013be1%3A0x13c9ded960a0be2!2s8800%20Holden%20Blvd%2C%20Fairfield%2C%20OH%2045014!5e0!3m2!1sen!2sus!4v1697824133896!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>          </div>
         </div>
+
       </div>
     </div>
   </section>
+
   <!-- end book section -->
 
   <!-- footer section -->
