--- a/restaurant/about.html
+++ b/restaurant/about.html
@@ -13,7 +13,12 @@
   <meta name="author" content="" />
   <link rel="shortcut icon" href="images/favicon.png" type="">
 
-  <title> Feane </title>
+  <title> Game Day Grill </title>
+
+   <!-- HubSpot Embed Code -->
+  <!-- Start of HubSpot Embed Code -->
+  <script type="text/javascript" id="hs-script-loader" async defer src="//js-na1.hs-scripts.com/44192916.js"></script>
+  <!-- End of HubSpot Embed Code -->
 
   <!-- bootstrap core css -->
   <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
