--- a/restaurant/index.html
+++ b/restaurant/index.html
@@ -73,7 +73,7 @@
               </li>
             </ul>
             <div class="user_option">
-              <a href="menu.html" class="user_link">
+              <a href="User_option.html" class="user_link">
                 <i class="fa fa-user" aria-hidden="true"></i>
               </a>
               <a class="cart_link" href="#">
@@ -416,8 +416,7 @@
                     BBQ Bacon Cheddar Burger
                   </h5>
                   <p>
-                    Lean ground beef cooked to order trimmed with bacon, BBQ, cheddar cheese, lettuce, tomato, and grilled onions on a white bun.
-                  </p>
+                    Lean ground beef cooked to order trimmed with bacon, BBQ, cheddar cheese, lettuce, tomato, grilled onions on a white bun,  our famouce sauce(or your choice of sause), and spice pickles(or your choice of pickles ).        </p>
                   <div class="options">
                     <h6>
                       $9.99
