--- a/restaurant/about.html
+++ b/restaurant/about.html
@@ -49,7 +49,7 @@
         <nav class="navbar navbar-expand-lg custom_nav-container ">
           <a class="navbar-brand" href="index.html">
             <span>
-              Feane
+              Game Day Grill
             </span>
           </a>
 
