--- a/User_option.html
+++ b/User_option.html
@@ -17,6 +17,7 @@
   <title> Game Day Grill </title>
 
   <!-- HubSpot Embed Code -->
+  <!-- Start of HubSpot Embed Code -->
   <script type="text/javascript" id="hs-script-loader" async defer src="//js-na1.hs-scripts.com/44192916.js"></script>
   <!-- End of HubSpot Embed Code -->
 
