index and my thing
i have tapered with it i am trying to make it work

--- a/restaurant/index.html
+++ b/restaurant/index.html
@@ -73,7 +73,7 @@
               </li>
             </ul>
             <div class="user_option">
-              <a href="User_option.html" class="user_link">
+              <a href="" class="User_option.html"user_link">
                 <i class="fa fa-user" aria-hidden="true"></i>
               </a>
               <a class="cart_link" href="#">
