change item names
Changed price for items and names

--- a/restaurant/index.html
+++ b/restaurant/index.html
@@ -643,11 +643,11 @@
                     French Fries
                   </h5>
                   <p>
-                    Veniam debitis quaerat officiis quasi cupiditate quo, quisquam velit, magnam voluptatem repellendus sed eaque
+                    Golden crispy fries made from idaho russet potatoes with your choice of dipping sauce
                   </p>
                   <div class="options">
                     <h6>
-                      $10
+                      $3.99
                     </h6>
                     <a href="">
                       <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 456.029 456.029" style="enable-background:new 0 0 456.029 456.029;" xml:space="preserve">
@@ -686,14 +686,15 @@
                 </div>
                 <div class="detail-box">
                   <h5>
-                    Delicious Pizza
+                    Taco Salad
                   </h5>
                   <p>
-                    Veniam debitis quaerat officiis quasi cupiditate quo, quisquam velit, magnam voluptatem repellendus sed eaque
+                    Shredded iceberg over tortilla chips, topped with tomatoes, onions, Cheddar cheese, chives, and black olives. Sour cream and salsa on the side. Choice of:
+                    Chicken, Ground Beef or Combo
                   </p>
                   <div class="options">
                     <h6>
-                      $15
+                      $9.79
                     </h6>
                     <a href="">
                       <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 456.029 456.029" style="enable-background:new 0 0 456.029 456.029;" xml:space="preserve">
@@ -762,14 +763,14 @@
                 </div>
                 <div class="detail-box">
                   <h5>
-                    Tasty Burger
+                    Prime Rib Sandwich
                   </h5>
                   <p>
-                    Veniam debitis quaerat officiis quasi cupiditate quo, quisquam velit, magnam voluptatem repellendus sed eaque
+                    Grilled and blackened ribeye on an onion bun, smothered with sautéed onions and Swiss cheese
                   </p>
                   <div class="options">
                     <h6>
-                      $12
+                      $13.99
                     </h6>
                     <a href="">
                       <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 456.029 456.029" style="enable-background:new 0 0 456.029 456.029;" xml:space="preserve">
@@ -838,14 +839,14 @@
                 </div>
                 <div class="detail-box">
                   <h5>
-                    Tasty Burger
+                    Hickory-Smoked BBQ Pulled Pork
                   </h5>
                   <p>
-                    Veniam debitis quaerat officiis quasi cupiditate quo, quisquam velit, magnam voluptatem repellendus sed eaque
+                    On a wheat bun with coleslaw on the side
                   </p>
                   <div class="options">
                     <h6>
-                      $14
+                      $8.49
                     </h6>
                     <a href="">
                       <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 456.029 456.029" style="enable-background:new 0 0 456.029 456.029;" xml:space="preserve">
@@ -914,14 +915,14 @@
                 </div>
                 <div class="detail-box">
                   <h5>
-                    Delicious Pasta
+                    Lasagne
                   </h5>
                   <p>
-                    Veniam debitis quaerat officiis quasi cupiditate quo, quisquam velit, magnam voluptatem repellendus sed eaque
+                    layers of enriched grain pasta, stuffed with savory, rich taste of meat sauce, topped with creamy melted cheese and chives
                   </p>
                   <div class="options">
                     <h6>
-                      $10
+                      $14.99
                     </h6>
                     <a href="">
                       <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 456.029 456.029" style="enable-background:new 0 0 456.029 456.029;" xml:space="preserve">
