--- a/restaurant/menu.html
+++ b/restaurant/menu.html
@@ -170,7 +170,7 @@
             <div class="box">
               <div>
                 <div class="img-box">
-                  <img src="images/f1.png" alt="">
+                  <img src="Placeholder.png" alt="">
                 </div>
                 <div class="detail-box">
                   <h5>
@@ -246,7 +246,7 @@
             <div class="box">
               <div>
                 <div class="img-box">
-                  <img src="images/f2.png" alt="">
+                  <img src="Placeholder.png" alt="">
                 </div>
                 <div class="detail-box">
                   <h5>
@@ -322,7 +322,7 @@
             <div class="box">
               <div>
                 <div class="img-box">
-                  <img src="images/f3.png" alt="">
+                  <img src="Placeholder.png" alt="">
                 </div>
                 <div class="detail-box">
                   <h5>
@@ -398,7 +398,7 @@
             <div class="box">
               <div>
                 <div class="img-box">
-                  <img src="images/f4.png" alt="">
+                  <img src="Placeholder.png" alt="">
                 </div>
                 <div class="detail-box">
                   <h5>
@@ -474,7 +474,7 @@
             <div class="box">
               <div>
                 <div class="img-box">
-                  <img src="images/f5.png" alt="">
+                  <img src="Placeholder.png" alt="">
                 </div>
                 <div class="detail-box">
                   <h5>
@@ -550,7 +550,7 @@
             <div class="box">
               <div>
                 <div class="img-box">
-                  <img src="images/f6.png" alt="">
+                  <img src="Placeholder.png" alt="">
                 </div>
                 <div class="detail-box">
                   <h5>
@@ -627,7 +627,7 @@
             <div class="box">
               <div>
                 <div class="img-box">
-                  <img src="images/f7.png" alt="">
+                  <img src="Placeholder.png" alt="">
                 </div>
                 <div class="detail-box">
                   <h5>
@@ -703,7 +703,7 @@
             <div class="box">
               <div>
                 <div class="img-box">
-                  <img src="images/f8.png" alt="">
+                  <img src="Placeholder.png" alt="">
                 </div>
                 <div class="detail-box">
                   <h5>
@@ -779,7 +779,7 @@
             <div class="box">
               <div>
                 <div class="img-box">
-                  <img src="images/f9.png" alt="">
+                  <img src="PlaceholderPlaceholder.png" alt="">
                 </div>
                 <div class="detail-box">
                   <h5>
