--- a/restaurant/about.html
+++ b/restaurant/about.html
@@ -165,7 +165,7 @@
               </h2>
             </div>
             <p>
-              We are a local retraunt that is family owned SSS
+              Game Day Grill is a vibrant culinary destination that embodies the perfect fusion of sports, food, and community. Located in the heart of Fairfield, this restaurant is where the thrill of game day meets exceptional dining. A true haven for sports enthusiasts, it offers a sensory delight, with big-screen TVs broadcasting live games, the jubilant cheers of fellow fans, and a menu that caters to all tastes. From mouthwatering burgers to gourmet sandwiches and fresh salads, Game Day Grill ensures that every bite is a culinary triumph. Whether you're a sports aficionado seeking the excitement of the game or a food lover in search of delectable dishes in a spirited atmosphere, Game Day Grill promises an unforgettable experience where camaraderie and cuisine unite.
             </p>
             <a href="">
               Read More
