--- a/restaurant/index.html
+++ b/restaurant/index.html
@@ -584,7 +584,7 @@
                         <g>
                           <g>
                             <path d="M439.296,84.91c-1.024,0-2.56-0.512-4.096-0.512H112.64l-5.12-34.304C104.448,27.566,84.992,10.67,61.952,10.67H20.48
-                         C9.216,10.67,0,19.886,0,31.15c0,11.264,9.216,20.48,20.48,20.48h41.472c2.56,0,4.608,2.048,5.12,4.608l31.744,216.064
+                         C9.216,10.67,0,19.886,0,31.15c0.264,9.216,20.48,20.48,20.48h41.472c2.56,0,4.608,2.048,5.12,4.608l31.744,216.064
                          c4.096,27.136,27.648,47.616,55.296,47.616h212.992c26.624,0,49.664-18.944,55.296-45.056l33.28-166.4
                          C457.728,97.71,450.56,86.958,439.296,84.91z" />
                           </g>
@@ -643,11 +643,11 @@
                     French Fries
                   </h5>
                   <p>
-                    Golden crispy fries made from idaho russet potatoes with your choice of dipping sauce
+                    Veniam debitis quaerat officiis quasi cupiditate quo, quisquam velit, magnam voluptatem repellendus sed eaque
                   </p>
                   <div class="options">
                     <h6>
-                      $3.99
+                      $10
                     </h6>
                     <a href="">
                       <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 456.029 456.029" style="enable-background:new 0 0 456.029 456.029;" xml:space="preserve">
@@ -686,15 +686,14 @@
                 </div>
                 <div class="detail-box">
                   <h5>
-                    Taco Salad
+                    Delicious Pizza
                   </h5>
                   <p>
-                    Shredded iceberg over tortilla chips, topped with tomatoes, onions, Cheddar cheese, chives, and black olives. Sour cream and salsa on the side. Choice of:
-                    Chicken, Ground Beef or Combo
+                    Veniam debitis quaerat officiis quasi cupiditate quo, quisquam velit, magnam voluptatem repellendus sed eaque
                   </p>
                   <div class="options">
                     <h6>
-                      $9.79
+                      $15
                     </h6>
                     <a href="">
                       <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 456.029 456.029" style="enable-background:new 0 0 456.029 456.029;" xml:space="preserve">
@@ -763,14 +762,14 @@
                 </div>
                 <div class="detail-box">
                   <h5>
-                    Prime Rib Sandwich
+                    Tasty Burger
                   </h5>
                   <p>
-                    Grilled and blackened ribeye on an onion bun, smothered with sautéed onions and Swiss cheese
+                    Veniam debitis quaerat officiis quasi cupiditate quo, quisquam velit, magnam voluptatem repellendus sed eaque
                   </p>
                   <div class="options">
                     <h6>
-                      $13.99
+                      $12
                     </h6>
                     <a href="">
                       <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 456.029 456.029" style="enable-background:new 0 0 456.029 456.029;" xml:space="preserve">
@@ -839,14 +838,14 @@
                 </div>
                 <div class="detail-box">
                   <h5>
-                    Hickory-Smoked BBQ Pulled Pork
+                    Tasty Burger
                   </h5>
                   <p>
-                    On a wheat bun with coleslaw on the side
+                    Veniam debitis quaerat officiis quasi cupiditate quo, quisquam velit, magnam voluptatem repellendus sed eaque
                   </p>
                   <div class="options">
                     <h6>
-                      $8.49
+                      $14
                     </h6>
                     <a href="">
                       <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 456.029 456.029" style="enable-background:new 0 0 456.029 456.029;" xml:space="preserve">
@@ -915,14 +914,14 @@
                 </div>
                 <div class="detail-box">
                   <h5>
-                    Lasagne
+                    Delicious Pasta
                   </h5>
                   <p>
-                    layers of enriched grain pasta, stuffed with savory, rich taste of meat sauce, topped with creamy melted cheese and chives
+                    Veniam debitis quaerat officiis quasi cupiditate quo, quisquam velit, magnam voluptatem repellendus sed eaque
                   </p>
                   <div class="options">
                     <h6>
-                      $14.99
+                      $10
                     </h6>
                     <a href="">
                       <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 456.029 456.029" style="enable-background:new 0 0 456.029 456.029;" xml:space="preserve">
@@ -1014,7 +1013,7 @@
               </h2>
             </div>
             <p>
-              The Game Day Grill launched its website to customers in 2023 and is ran by ------   
+              The Game Day Grill launched its website to customers in 2023 and is ran by Amr Daraghmeh, Conner Snyder, and Colton Abel.
             </p>
             <a href="">
               Read More
