--- a/restaurant/index.html
+++ b/restaurant/index.html
@@ -349,7 +349,7 @@
             <div class="box">
               <div>
                 <div class="img-box">
-                  <img src="images/f1.png" alt="">
+                  <img src="Placeholder.png" alt="">
                 </div>
                 <div class="detail-box">
                   <h5>
@@ -395,14 +395,14 @@
             <div class="box">
               <div>
                 <div class="img-box">
-                  <img src="images/f2.png" alt="">
+                  <img src="Placeholder.png" alt="">
                 </div>
                 <div class="detail-box">
                   <h5>
                     BBQ Bacon Cheddar Burger
                   </h5>
                   <p>
-                    Lean ground beef cooked to order trimmed with bacon, BBQ, cheddar cheese, lettuce, tomato, grilled onions on a white bun,  our famouce sauce(or your choice of sause), and spice pickles(or your choice of pickles ).        </p>
+                    Lean ground beef cooked to order trimmed with bacon, BBQ, cheddar cheese, lettuce, tomato, grilled onions on a white bun    </p>
                   <div class="options">
                     <h6>
                       $9.99
@@ -440,7 +440,7 @@
             <div class="box">
               <div>
                 <div class="img-box">
-                  <img src="images/f3.png" alt="">
+                  <img src="Placeholder.png" alt="">
                 </div>
                 <div class="detail-box">
                   <h5>
@@ -516,7 +516,7 @@
             <div class="box">
               <div>
                 <div class="img-box">
-                  <img src="images/f4.png" alt="">
+                  <img src="Placeholder.png" alt="">
                 </div>
                 <div class="detail-box">
                   <h5>
@@ -562,7 +562,7 @@
             <div class="box">
               <div>
                 <div class="img-box">
-                  <img src="images/f5.png" alt="">
+                  <img src="Placeholder.png" alt="">
                 </div>
                 <div class="detail-box">
                   <h5>
@@ -608,7 +608,7 @@
             <div class="box">
               <div>
                 <div class="img-box">
-                  <img src="images/f6.png" alt="">
+                  <img src="Placeholder.png" alt="">
                 </div>
                 <div class="detail-box">
                   <h5>
@@ -654,7 +654,7 @@
             <div class="box">
               <div>
                 <div class="img-box">
-                  <img src="images/f7.png" alt="">
+                  <img src="Placeholder.png" alt="">
                 </div>
                 <div class="detail-box">
                   <h5>
@@ -730,7 +730,7 @@
             <div class="box">
               <div>
                 <div class="img-box">
-                  <img src="images/f8.png" alt="">
+                  <img src="Placeholder.png" alt="">
                 </div>
                 <div class="detail-box">
                   <h5>
@@ -806,7 +806,7 @@
             <div class="box">
               <div>
                 <div class="img-box">
-                  <img src="images/f9.png" alt="">
+                  <img src="Placeholder.png" alt="">
                 </div>
                 <div class="detail-box">
                   <h5>
