--- a/restaurant/index.html
+++ b/restaurant/index.html
@@ -349,7 +349,7 @@
             <div class="box">
               <div>
                 <div class="img-box">
-                  <img src="Placeholder.png" alt="">
+                  <img src="images/burger1.PNG" alt="">
                 </div>
                 <div class="detail-box">
                   <h5>
