--- a/restaurant/index.html
+++ b/restaurant/index.html
@@ -98,36 +98,6 @@
                    c1.024,28.16,24.064,50.688,52.224,50.688h1.024C193.536,443.31,216.576,418.734,215.04,389.55z" />
                     </g>
                   </g>
-                  <g>
-                  </g>
-                  <g>
-                  </g>
-                  <g>
-                  </g>
-                  <g>
-                  </g>
-                  <g>
-                  </g>
-                  <g>
-                  </g>
-                  <g>
-                  </g>
-                  <g>
-                  </g>
-                  <g>
-                  </g>
-                  <g>
-                  </g>
-                  <g>
-                  </g>
-                  <g>
-                  </g>
-                  <g>
-                  </g>
-                  <g>
-                  </g>
-                  <g>
-                  </g>
                 </svg>
               </a>
               <form class="form-inline">
@@ -349,7 +319,7 @@
             <div class="box">
               <div>
                 <div class="img-box">
-                  <img src="images/burger1.PNG" alt="">
+                  <img src="Placeholder.png" alt="">
                 </div>
                 <div class="detail-box">
                   <h5>
