--- a/restaurant/index.html
+++ b/restaurant/index.html
@@ -365,7 +365,7 @@
             <div class="box">
               <div>
                 <div class="img-box">
-                  <img src="Placeholder.png" alt="">
+                  <img src="images/f2.png" alt="">
                 </div>
                 <div class="detail-box">
                   <h5>
