--- a/restaurant/index.html
+++ b/restaurant/index.html
@@ -395,7 +395,7 @@
             <div class="box">
               <div>
                 <div class="img-box">
-                  <img src="Placeholder.png" alt="">
+                  <img src="images/BBQ Bacon CHeddar Burger1 (1).jpg" alt="">
                 </div>
                 <div class="detail-box">
                   <h5>
@@ -440,7 +440,7 @@
             <div class="box">
               <div>
                 <div class="img-box">
-                  <img src="Placeholder.png" alt="">
+                  <img src="images/Salad1.jpg" alt="">
                 </div>
                 <div class="detail-box">
                   <h5>
@@ -516,7 +516,7 @@
             <div class="box">
               <div>
                 <div class="img-box">
-                  <img src="Placeholder.png" alt="">
+                  <img src="images/Chicken-Alfredo1.jpg" alt="">
                 </div>
                 <div class="detail-box">
                   <h5>
