--- a/restaurant/about.html
+++ b/restaurant/about.html
@@ -161,7 +161,7 @@
           <div class="detail-box">
             <div class="heading_container">
               <h2>
-                We Are Feane
+                We Are Game Day Grill!
               </h2>
             </div>
             <p>
