--- a/restaurant/index.html
+++ b/restaurant/index.html
@@ -258,7 +258,7 @@
                 </h5>
                 <h6>
                   <span> $39.99
-                    <h6></span>A combo for the whole family! Get four burgers and four orders of fries.(or any side) </h6>
+                    <h6></span>A combo for the whole family! Get four burgers and four orders of fries or any side </h6>
                   
                 </h6>
                 <a href="">
@@ -310,7 +310,7 @@
         <li data-filter=".burger">Burger</li>
         <li data-filter=".salad">Salad</li>
         <li data-filter=".pasta">Pasta</li>
-        <li data-filter=".fries">Fries</li>
+        <li data-filter=".sides">Sides</li>
       </ul>
 
       <div class="filters-content">
@@ -528,7 +528,7 @@
               </div>
             </div>
           </div>
-          <div class="col-sm-6 col-lg-4 all fries">
+          <div class="col-sm-6 col-lg-4 all sides">
             <div class="box">
               <div>
                 <div class="img-box">
@@ -539,7 +539,7 @@
                     French Fries
                   </h5>
                   <p>
-                    Veniam debitis quaerat officiis quasi cupiditate quo, quisquam velit, magnam voluptatem repellendus sed eaque
+                    Golden crispy fries made from idaho russet potatoes with your choice of dipping sauce
                   </p>
                   <div class="options">
                     <h6>
@@ -582,14 +582,15 @@
                 </div>
                 <div class="detail-box">
                   <h5>
-                    Delicious Pizza
+                    Taco Salad
                   </h5>
                   <p>
-                    Veniam debitis quaerat officiis quasi cupiditate quo, quisquam velit, magnam voluptatem repellendus sed eaque
+                    Shredded iceberg over tortilla chips, topped with tomatoes, onions, Cheddar cheese, chives, and black olives. Sour cream and salsa on the side. Choice of:
+                    Chicken, Ground Beef
                   </p>
                   <div class="options">
                     <h6>
-                      $15
+                      $9.79
                     </h6>
                     <a href="">
                       <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 456.029 456.029" style="enable-background:new 0 0 456.029 456.029;" xml:space="preserve">
@@ -628,14 +629,14 @@
                 </div>
                 <div class="detail-box">
                   <h5>
-                    Tasty Burger
+                    Prime Rib Sandwich
                   </h5>
                   <p>
-                    Veniam debitis quaerat officiis quasi cupiditate quo, quisquam velit, magnam voluptatem repellendus sed eaque
+                    Grilled and blackened ribeye on an onion bun, smothered with sautéed onions and Swiss cheese
                   </p>
                   <div class="options">
                     <h6>
-                      $12
+                      $13.99
                     </h6>
                     <a href="">
                       <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 456.029 456.029" style="enable-background:new 0 0 456.029 456.029;" xml:space="preserve">
@@ -704,14 +705,14 @@
                 </div>
                 <div class="detail-box">
                   <h5>
-                    Tasty Burger
+                    Lasagne
                   </h5>
                   <p>
-                    Veniam debitis quaerat officiis quasi cupiditate quo, quisquam velit, magnam voluptatem repellendus sed eaque
+                    layers of enriched grain pasta, stuffed with savory, rich taste of meat sauce, topped with creamy melted cheese and chives
                   </p>
                   <div class="options">
                     <h6>
-                      $14
+                      $14.99
                     </h6>
                     <a href="">
                       <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 456.029 456.029" style="enable-background:new 0 0 456.029 456.029;" xml:space="preserve">
@@ -820,6 +821,82 @@
               </div>
             </div>
           </div>
+          <div class="col-sm-6 col-lg-4 all side">
+            <div class="box">
+              <div>
+                <div class="img-box">
+                  <img src="Placeholder.png" alt="">
+                </div>
+                <div class="detail-box">
+                  <h5>
+                    Coleslaw
+                  </h5>
+                  <p>
+                    layers of enriched grain pasta, stuffed with savory, rich taste of meat sauce, topped with creamy melted cheese and chives
+                  </p>
+                  <div class="options">
+                    <h6>
+                      $14.99
+                    </h6>
+                    <a href="">
+                      <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 456.029 456.029" style="enable-background:new 0 0 456.029 456.029;" xml:space="preserve">
+                        <g>
+                          <g>
+                            <path d="M345.6,338.862c-29.184,0-53.248,23.552-53.248,53.248c0,29.184,23.552,53.248,53.248,53.248
+                         c29.184,0,53.248-23.552,53.248-53.248C398.336,362.926,374.784,338.862,345.6,338.862z" />
+                          </g>
+                        </g>
+                        <g>
+                          <g>
+                            <path d="M439.296,84.91c-1.024,0-2.56-0.512-4.096-0.512H112.64l-5.12-34.304C104.448,27.566,84.992,10.67,61.952,10.67H20.48
+                         C9.216,10.67,0,19.886,0,31.15c0,11.264,9.216,20.48,20.48,20.48h41.472c2.56,0,4.608,2.048,5.12,4.608l31.744,216.064
+                         c4.096,27.136,27.648,47.616,55.296,47.616h212.992c26.624,0,49.664-18.944,55.296-45.056l33.28-166.4
+                         C457.728,97.71,450.56,86.958,439.296,84.91z" />
+                          </g>
+                        </g>
+                        <g>
+                          <g>
+                            <path d="M215.04,389.55c-1.024-28.16-24.576-50.688-52.736-50.688c-29.696,1.536-52.224,26.112-51.2,55.296
+                         c1.024,28.16,24.064,50.688,52.224,50.688h1.024C193.536,443.31,216.576,418.734,215.04,389.55z" />
+                          </g>
+                        </g>
+                        <g>
+                        </g>
+                        <g>
+                        </g>
+                        <g>
+                        </g>
+                        <g>
+                        </g>
+                        <g>
+                        </g>
+                        <g>
+                        </g>
+                        <g>
+                        </g>
+                        <g>
+                        </g>
+                        <g>
+                        </g>
+                        <g>
+                        </g>
+                        <g>
+                        </g>
+                        <g>
+                        </g>
+                        <g>
+                        </g>
+                        <g>
+                        </g>
+                        <g>
+                        </g>
+                      </svg>
+                    </a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div> <!-- test -->
         </div>
       </div>
       <div class="btn-box">
